--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,13 @@
 
 html {
     height: 100%;
+    overflow-x: hidden; 
 }
 
 body {
     height: 100vh;
     cursor: url('./assets/cursor-hp-2.cur') 1 1, auto;
+    overflow-x: hidden;
 }
 
 a,
