--- a/styles.css
+++ b/styles.css
@@ -8,13 +8,11 @@
 
 html {
     height: 100%;
-    overflow-x: hidden;
 }
 
 body {
     height: 100vh;
     cursor: url('./assets/cursor-hp-2.cur') 1 1, auto;
-    overflow-x: hidden;
 }
 
 a,
@@ -28,8 +26,6 @@ input[type="button"] {
 body {
     line-height: 1.5;
     font-family: 'Yusei Magic', sans-serif;
-    overflow-x: hidden;
-
     position: relative;
 }
 
@@ -101,15 +97,14 @@ header h1 {
 
 .profile-sticky-wrapper {
     position: sticky;
-    top: -16%;
+    top: -17%;
     z-index: 10;
-    display: flex;
-    justify-content: center;
     width: 100%;
     width: 100%;
     max-width: 43.6rem;
     margin: 0 auto;
     padding: 0 1.6rem;
+
 
     transition: transform 0.6s cubic-bezier(.18, .16, .37, .98),
         opacity 0.2s ease-in-out;
@@ -119,9 +114,12 @@ header h1 {
     transform: scale(0.4);
 }
 
+
 .img-profile {
+    position: sticky;
+    top: 0;
+    z-index: 10;
     padding-top: 2rem;
-    position: relative;
     animation: float-rotate 4s ease-in-out infinite alternate;
     width: fit-content;
 }
@@ -129,37 +127,25 @@ header h1 {
 .img-profile::after {
     content: "";
     position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 130%;
-    height: 130%;
-    max-width: 100vw;
-    max-height: 100vh;
-    transform: translate(-50%, -50%);
+    inset: -50px;
+    /* controla o tamanho da área do brilho */
     background: rgba(199, 158, 79, 0.6);
     border-radius: 50% / 40%;
     filter: blur(100px);
     z-index: -1;
     animation: light-glow 3s ease-in-out infinite alternate;
-
 }
 
 .img-profile::before {
     content: "";
     position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 130%;
-    height: 130%;
-    max-width: 100vw;
-    max-height: 100vh;
-    transform: translate(-50%, -50%);
+    inset: -50px;
+    /* mesmo controle do after */
     background: rgba(166, 138, 245, 0.6);
     border-radius: 50% / 45%;
     filter: blur(100px);
     z-index: -2;
     animation: light-glow-before 3s ease-in-out infinite alternate;
-
 }
 
 @keyframes light-glow {
@@ -402,7 +388,7 @@ h2 {
     }
 
     .profile-sticky-wrapper {
-        top: 0;
+        top: -16%;
     }
 
 }
