--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 
 html {
     height: 100%;
+    overflow-x: hidden;
 }
 
 body {
@@ -97,14 +98,13 @@ header h1 {
 
 .profile-sticky-wrapper {
     position: sticky;
-    top: -17%;
+    top: 0;
+
     z-index: 10;
-    width: 100%;
     width: 100%;
     max-width: 43.6rem;
     margin: 0 auto;
     padding: 0 1.6rem;
-
 
     transition: transform 0.6s cubic-bezier(.18, .16, .37, .98),
         opacity 0.2s ease-in-out;
@@ -116,8 +116,7 @@ header h1 {
 
 
 .img-profile {
-    position: sticky;
-    top: 0;
+    position: fixed;
     z-index: 10;
     padding-top: 2rem;
     animation: float-rotate 4s ease-in-out infinite alternate;
@@ -275,7 +274,7 @@ header .img-profile::before {
 }
 
 .separator {
-    margin: 4rem 0 2rem 0;
+    margin: 64rem 0 2rem 0;
 }
 
 p {
@@ -387,8 +386,5 @@ h2 {
         font-size: 52%;
     }
 
-    .profile-sticky-wrapper {
-        top: -15%;
-    }
 
 }
