--- a/styles.css
+++ b/styles.css
@@ -98,13 +98,18 @@ header h1 {
 
 .profile-sticky-wrapper {
     position: sticky;
-    top: 0;
-
+    top: -16rem;
     z-index: 10;
     width: 100%;
     max-width: 43.6rem;
     margin: 0 auto;
-    padding: 0 1.6rem;
+
+    /* Add padding here */
+    padding: 2rem 1.6rem 0 1.6rem;
+
+    display: flex;
+    align-items: start;
+    justify-content: center;
 
     transition: transform 0.6s cubic-bezier(.18, .16, .37, .98),
         opacity 0.2s ease-in-out;
@@ -116,9 +121,10 @@ header h1 {
 
 
 .img-profile {
-    position: fixed;
-    z-index: 10;
-    padding-top: 2rem;
+    /* Remove padding-top from here if you added it above */
+    /* padding-top: 2rem; */
+    width: 100%;
+    max-width: 92vw;
     animation: float-rotate 4s ease-in-out infinite alternate;
     width: fit-content;
 }
@@ -126,9 +132,18 @@ header h1 {
 .img-profile::after {
     content: "";
     position: absolute;
-    inset: -50px;
-    /* controla o tamanho da área do brilho */
-    background: rgba(199, 158, 79, 0.6);
+
+    top: 50%;
+
+    left: 50%;
+
+    width: 100%;
+
+    height: 100%;
+
+    transform: translate(-50%, -50%) scale(1.1);
+
+    background: rgba(199, 158, 79, 0.8);
     border-radius: 50% / 40%;
     filter: blur(100px);
     z-index: -1;
@@ -138,9 +153,17 @@ header h1 {
 .img-profile::before {
     content: "";
     position: absolute;
-    inset: -50px;
-    /* mesmo controle do after */
-    background: rgba(166, 138, 245, 0.6);
+    top: 50%;
+
+    left: 50%;
+
+    width: 100%;
+
+    height: 100%;
+
+    transform: translate(-50%, -50%) scale(1.1);
+
+    background: rgba(166, 138, 245, 0.8);
     border-radius: 50% / 45%;
     filter: blur(100px);
     z-index: -2;
@@ -168,17 +191,17 @@ header h1 {
 
 @keyframes light-glow-before {
     0% {
-        opacity: 0.4;
+        opacity: 0.6;
         filter: blur(120px);
     }
 
     50% {
-        opacity: 0.8;
-        filter: blur(180px);
+        opacity: 1;
+        filter: blur(225px);
     }
 
     100% {
-        opacity: 0.4;
+        opacity: 0.6;
         filter: blur(120px);
     }
 }
@@ -274,7 +297,7 @@ header .img-profile::before {
 }
 
 .separator {
-    margin: 64rem 0 2rem 0;
+    margin: 4rem 0 2rem 0;
 }
 
 p {
